# gitworth

./: .gitignore  README.md  pyproject.toml
src/: gitworth.py
